# catalog

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.import  Makefile  RELEASE_NOTES.md  azure-pipelines.yml  build.fsx  catalog.sln  docker-compose.yml  go.mod  go.sum  main.go  package-lock.json  package.json  paket.dependencies  test.http  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: api-image.yml  docker-image.yml  import-image.yml
.ionide/: symbolCache.db
api/handlers/: products.go
cmd/: api.go  import.go  start.go
core/dto/: product.go
core/model/: product.go
core/repositories/: catalog.go
core/services/: catalog.go  import.go  messaging.go
core/usecases/: import.go  product.go
infrastructure/model/: product.go
infrastructure/mongodb/: client.go
infrastructure/rabbitmq/: rabbitmq.go
infrastructure/repositories/: catalog.go
infrastructure/services/: messaging.go  services.go
products/: core.properties
products/conf/: mapping-FoldToASCII.txt  schema.xml  solrconfig.xml
scripts/: azrue-pipelines.sh  azure-pipelines.sh  build.fsx  paket.dependencies
src/: index.ts  main.go  main.rs
src/Catalog.Api/: Catalog.Api.csproj  Dockerfile  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json  paket.references
src/Catalog.Application/: Catalog.Application.csproj  Class1.cs  paket.references
src/Catalog.Core/: Catalog.Core.csproj  paket.references
src/Catalog.Domain/: Catalog.Domain.fsproj  Helpers.fs  Library.fs  Model.fs  Repository.fs  paket.references
(+101 files in other folders)
